--- a/SphericalHarmonicsPaper/NIMA/spherical_paper.tex
+++ b/SphericalHarmonicsPaper/NIMA/spherical_paper.tex
@@ -73,7 +73,7 @@
 \section*{Acknowledgements}
 \input{acknowledgements}
 
-\bibliography{bibliography.bib}
+\bibliography{bibliography}
 
 \appendix
 % The following line is a hack for elsevier to get the appendix and
