--- a/SphericalHarmonicsPaper/NIMA/authors.tex
+++ b/SphericalHarmonicsPaper/NIMA/authors.tex
@@ -3,7 +3,9 @@
 \author[UChicago]{Henry J. Frisch}
 \author[MIT]{Jonathan Ouellet}
 \author[MIT]{Lindley Winslow}
+\author[OPTIN]{{\bf Opt in}}
 
 
 \address[UChicago]{ Enrico Fermi Institute, University of Chicago, Chicago, IL, 60637 }
 \address[MIT]{ Massachusetts Institute of Technology, Cambridge, MA 02139 }
+\address[OPTIN]{{\bf Please opt-in if you think you should be on the author list}}
