--- a/SphericalHarmonicsPaper/NIMA/20-LiquidScintillatorDetector.tex
+++ b/SphericalHarmonicsPaper/NIMA/20-LiquidScintillatorDetector.tex
@@ -1,25 +1,23 @@
 \section{Detector Model}
 \label{sec:detector_description}
 
-In order to study topology of $\vbb$ decay and background events in a liquid scintillator detector, a Geant4\cite{geant4one,geant4two} simulation has been constructed. The same simulation is used as in our preceding paper~\cite{Aberle2014}. Here we repeat most relevant simulation parameters.
+In order to study the topology of $\vbb$ decay and background events in a liquid scintillator detector, a Geant4\cite{geant4one,geant4two} simulation has been constructed. This is the same simulation used in our preceding paper~\cite{Aberle2014}. Therefore, we limit out discussion of the simulation to a summary of the the most relevant simulation parameters.
 
-The simulation uses Geant4~version 4.9.6 with the default liquid scintillator optical model, in which optical photons are assigned the group velocity in the wavelength region of normal dispersion.
+The simulation uses Geant4~version 4.9.6.  We use the default liquid scintillator optical model, in which optical photons are assigned the group velocity in the wavelength region of normal dispersion.
 
 The detector geometry is a sphere of 6.5~m radius filled with
-scintillator. The default scintillator properties have been chosen to match a KamLAND-like
+scintillator. The default scintillator composition has been chosen to match a KamLAND-like
 scintillator\cite{kamland2003}: 80\% n-dodecane, 20\% pseudocumene and 1.52~g/l PPO. The
-scintillator properties implemented in the simulation include the
-atomic composition and density ($\rho$ = 0.78~g/ml), the
-wavelength-dependent attenuation length\cite{tajimaMaster} and
-refractive index\cite{OlegThesis}, the scintillation emission
-spectrum\cite{tajimaMaster}, emission rise time ($\tau_r$ = 1.0~ns)
-and emission decay time constants ($\tau_{d1}$ = 6.9~ns and
-$\tau_{d2}$ = 8.8~ns with relative weights of 0.87 and 
-0.13)\cite{tajimaThesis}, scintillator light yield (9030 photons/MeV),
-and the Birks constant ($kB$ $\approx$ 0.1~mm/MeV)\cite{ChrisThesis}.  This is a standard scintillator. The attenuation length at 400~nm, the position of the peak standard bialkali photocathode efficiency, is 25~m. The attenuation length drops precipitously between 370~nm and 360~nm from 6.5~m to 0.65~m. We use this drop to define the cutoff wavelength at 370~nm. Variations from the baseline KamLAND case are discussed below. 
-
-Re-emission of absorbed photons in the scintillator
-bulk volume and optical scattering, specifically Rayleigh scattering, have not yet been included by default. A test simulation shows that the effect of optical scattering is negligible~\cite{Aberle2014}.
+scintillator properties implemented in the simulation include 
+\begin{itemize}
+\item the atomic composition and density ($\rho$ = 0.78~g/ml), 
+\item the wavelength-dependent attenuation length\cite{tajimaMaster} and refractive index\cite{OlegThesis}, 
+\item the scintillation emission spectrum\cite{tajimaMaster}, 
+\item emission rise time ($\tau_r$ = 1.0~ns) and emission decay time constants ($\tau_{d1}$ = 6.9~ns and $\tau_{d2}$ = 8.8~ns with relative weights of 0.87 and 0.13)\cite{tajimaThesis}, 
+\item scintillator light yield (9030 photons/MeV), and 
+\item the Birks constant ($kB$ $\approx$ 0.1~mm/MeV)\cite{ChrisThesis}.  
+\end{itemize}
+The attenuation length at 400~nm, which is the position of the peak standard bialkali photocathode efficiency, is 25~m. The attenuation length drops precipitously from 6.5~m to 0.65~m between 370~nm and 360~nm. We use this drop to define the cutoff wavelength at 370~nm. This is a standard scintillator. However, we do deviate from the baseline KamLAND case in that the re-emission of absorbed photons in the scintillator bulk volume and optical scattering, specifically Rayleigh scattering, has not yet been included. A test simulation shows that the effect of optical scattering is negligible~\cite{Aberle2014}.
 
 The inner sphere surface is used as the photodetector. It is treated
 as fully absorbing (no reflections), with a photodetector coverage of
@@ -32,18 +30,16 @@ same photocathode type with similar quantum efficiency. We are neglecting any th
 Four effects primarily contribute to the timing of the scintillator detector
 system: the travel time of the particle, the time constants of the scintillation process, chromatic dispersion, and the timing of the photodetector.
 
-In the energy range important for $0\nu\beta\beta$, a 1.4~MeV electron travels a total path length of 0.8~cm, has a distance from the origin of 0.6~cm in 0.030$\pm$0.004~ns  and takes 0.028$\pm$0.004~ns to drop below Cherenkov threshold. We note that due to scattering the final direction of the electron before it stops does not correspond to the initial direction; however the scattering angle is small while the majority of Cherenkov light is produced. The Cherenkov light thus encodes the direction of the primary electron. The scattering physics is handled by Geant4's ``Multiple Scattering" process which is valid down to 1~keV, where atomic shell structure becomes important\cite{geant4scatt}.
+In the energy range important for $0\nu\beta\beta$, a 1.4~MeV electron travels a total path length of 0.8~cm, has a distance from the origin of 0.6~cm in 0.030$\pm$0.004~ns  and takes 0.028$\pm$0.004~ns to drop below Cherenkov threshold. We note that due to scattering of the electron, the final direction of the electron before it stops does not correspond to the initial direction; however the scattering angle is small while the majority of Cherenkov light is produced. The Cherenkov light thus still encodes the direction of the primary electron. The scattering physics is handled by Geant4's ``Multiple Scattering" process which is valid down to 1~keV, where atomic shell structure becomes important\cite{geant4scatt}.
 
 
 The scintillator-specific rise and decay times are the second effect that determines the timing in a scintillator detector. The first step in the scintillation process is the transfer of energy from the solvent to the solute. The time constant of this
 energy transfer accounts for a rise time in scintillation light
-emission. Past neutrino experiments were not highly sensitive to the
-effect of the scintillation rise time, which is the reason why there
-is a lack of accurate numbers. We assume a rise time of 1.0~ns; more
+emission. Because past neutrino experiments were not highly sensitive to the
+effect of the scintillation rise time, there is a lack of accurate measurements of this property. We assume a rise time of 1.0~ns -- but more
 detailed studies are needed in the future. The two time constants used
 to describe the falling edge of the scintillator emission time
-distribution (quoted above) are values specific to the KamLAND
-scintillator.
+distribution (quoted above) are values specific to the KamLAND scintillator.
 
 Chromatic dispersion is the third effect that determines the timing in a scintillator detector. Due to the wavelength-dependence of the refractive index the speed of
 light in the scintillator increases
@@ -59,17 +55,16 @@ effect of the finite electron travel time.
 The fourth effect determining the timing in a scintillator detector is the timing of the photodetectors. The measurement of the arrival times of single photoelectrons is
 affected by the transit-time spread (TTS) of the photodetectors, a
 number which can be different by orders of magnitude depending on the
-detector type. The default TTS of 0.1~ns ($\sigma$) can be achieved with large area picosecond photodetectors
+detector type. We use a TTS of 0.1~ns ($\sigma$), which can be achieved with large area picosecond photodetectors
 (LAPPDs)\cite{Adams:2013nva,RSI_paper,PSEC4_paper,anode_paper} and possibly hybrid photodetectors
 (HPDs)\cite{hpdThesis}; even significantly lower TTS numbers are
 realistic with the LAPPD\cite{RSI_paper,PSEC4_paper,anode_paper}.
 
-The primary
-quantities provided by the Geant4~simulation are the photoelectron hit
+The primary quantities provided by the Geant4~simulation are the photoelectron hit
 positions and the detection times after the TTS resolution has been
 applied. These quantities are then used for event topology reconstruction.
 
-Figures~\ref{fig:ArrivalTimeDist} and~\ref{fig:NPhotDist} show the output of the detector simulation discussed in this section. Left panel in Fig.~\ref{fig:ArrivalTimeDist} compares PE arrival time between Cherenkov and scintillation light for simulation of 1000 $\Te$ $\vbb$-decay events. Right panel in Fig.~\ref{fig:ArrivalTimeDist} compares Cherenkov PE arrival time between $\Te$ $\vbb$-decay and $\B$ events. $\B$ events produce slightly higher number of the Cherenkov photons because they have only one electron carrying the same kinetic energy as two electrons in the case of $\vbb$-decay events. Distributions of the scintillation PEs arrival time are indistinguishable between $^{130}$Te 0{\nbb} decay and $^8$B due to identical total energy in the event, $Q(^{130}{\rm Te})=2.526$~MeV.
+Figures~\ref{fig:ArrivalTimeDist} and~\ref{fig:NPhotDist} show the output of the detector simulation discussed in this section. Left panel in Fig.~\ref{fig:ArrivalTimeDist} compares PE arrival time between Cherenkov and scintillation light for 1000 simulated $\Te$ $\vbb$-decay events. The right panel in Fig.~\ref{fig:ArrivalTimeDist} compares the Cherenkov PE arrival times between $\Te$ $\vbb$-decay and $\B$ events. $\B$ events produce a slightly higher number of the Cherenkov photons because they have only one electron carrying the same kinetic energy as opposed to the two electrons in the case of $\vbb$-decay events. Distributions of the scintillation PEs' arrival time are indistinguishable between $^{130}$Te 0{\nbb} decay and $^8$B due to identical total energy in the event, $Q(^{130}{\rm Te})=2.526$~MeV.
 
 \begin{figure*}[ht]
   \centering
@@ -90,7 +85,8 @@ Figures~\ref{fig:ArrivalTimeDist} and~\ref{fig:NPhotDist} show the output of the
 \label{fig:ArrivalTimeDist}
 \end{figure*}
 
-As shown in Fig.~\ref{fig:ArrivalTimeDist} time cut of 33.5~ns on the PE arrival time selects a sample of early PEs that includes majority of the Cherenkov light. Comparable number of scintillation PEs gets selected with this time cut. Figure~\ref{fig:NPhotDist} shows total number of scintillation and Cherenkov PE per event for $\vbb$ signal and $\B$ background. Due to higher number of Cherenkov PE produces in single electron event topology early PE sample has on average slightly higher number of PE. The difference is not significant to be used as a reliable discriminant between $\vbb$-decay and $\B$ events. However it may provide an extra handle on signal-background separation in combination (e.g. by using multivariative techniques) with other event parameters.
+As shown in Fig.~\ref{fig:ArrivalTimeDist}, a time cut of 33.5~ns on the PE arrival time selects a sample of early PEs that includes the majority of Cherenkov photons. Scintillation PEs also are selected with this time cut. Figure~\ref{fig:NPhotDist} shows the total number of scintillation and Cherenkov PE per event for $\vbb$ signal and $\B$ background events. 
+The higher number of Cherenkov PE produces in single electron event topology early PE sample has on average slightly higher number of PE. This difference is not significant enough to be used alone as a reliable discriminant between $\vbb$-decay and $\B$ events. However it may provide an extra handle on signal-background separation in combination (e.g. by using multivariative techniques) with other event parameters.
 
 \begin{figure*}[ht]
   \centering
