edits to section 2

--- a/SphericalHarmonicsPaper/NIMA/20-LiquidScintillatorDetector.tex
+++ b/SphericalHarmonicsPaper/NIMA/20-LiquidScintillatorDetector.tex
@@ -86,7 +86,7 @@ Figures~\ref{fig:ArrivalTimeDist} and~\ref{fig:NPhotDist} show the output of the
 \end{figure*}
 
 As shown in Fig.~\ref{fig:ArrivalTimeDist}, a time cut of 33.5~ns on the PE arrival time selects a sample of early PEs that includes the majority of Cherenkov photons. Scintillation PEs also are selected with this time cut. Figure~\ref{fig:NPhotDist} shows the total number of scintillation and Cherenkov PE per event for $\vbb$ signal and $\B$ background events. 
-The higher number of Cherenkov PE produces in single electron event topology early PE sample has on average slightly higher number of PE. This difference is not significant enough to be used alone as a reliable discriminant between $\vbb$-decay and $\B$ events. However it may provide an extra handle on signal-background separation in combination (e.g. by using multivariative techniques) with other event parameters.
+The $\B$ events do have a higher number of Cherenkov PEs on average compared to $\vbb$ events because of the single electron in $\B$ events has a higher energy than the two electrons from $\vbb$ decay.   This difference, though, is not significant enough to be used alone as a reliable discriminant between $\vbb$-decay and $\B$ events.  However, it may provide an extra handle on signal-background separation in combination (e.g. by using multivariative techniques) with other event parameters.
 
 \begin{figure*}[ht]
   \centering
